samples/_failures_safe/1761085003_3d0d5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a72c6870.c: In function ‘main’:
./samples/SAFE/__tmp_a72c6870.c:141:15: error: expected ‘;’ at end of input
  141 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_a72c6870.c:141:9: error: expected declaration or statement at end of input
  141 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_a72c6870.c:141:9: error: expected declaration or statement at end of input
